[gd_scene load_steps=2 format=3 uid="uid://hsawtbwc05qp"]

[ext_resource type="Script" path="res://Script/geo_bio_point_scale.gd" id="1_qk0l6"]

[node name="GeoBioPointScale" type="Label"]
offset_right = 173.0
offset_bottom = 26.0
text = "地理, 生物最高分为:"
script = ExtResource("1_qk0l6")

[node name="GeoBio" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 42.0
offset_right = 156.0
offset_bottom = 161.0

[node name="MaxIs100" type="CheckBox" parent="GeoBio"]
layout_mode = 2
text = "100 分"

[node name="MaxIs50" type="CheckBox" parent="GeoBio"]
layout_mode = 2
text = "50 分"
